--- a/package.json
+++ b/package.json
@@ -20,15 +20,29 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera": "^5.6.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.6.1",
+    "@ionic-native/file": "^5.6.1",
+    "@ionic-native/file-path": "^5.6.1",
+    "@ionic-native/file-transfer": "^5.6.1",
     "@ionic-native/http": "^5.6.1",
+    "@ionic-native/image-picker": "^5.6.1",
+    "@ionic-native/ionic-webview": "^5.6.1",
+    "@ionic-native/onesignal": "^5.6.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "2.0.9",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-crop": "0.4.0",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-filepath": "1.5.5",
+    "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
+    "onesignal-cordova-plugin": "2.4.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -73,10 +87,15 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-crop": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-telerik-imagepicker": {}
     },
     "platforms": [
       "android"
