--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@auth0/angular-jwt": "^2.1.0",
     "@ionic-native/camera": "^5.6.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.6.1",
@@ -29,7 +30,7 @@
     "@ionic-native/http": "^5.6.1",
     "@ionic-native/image-picker": "^5.6.1",
     "@ionic-native/ionic-webview": "^5.6.1",
-    "@ionic-native/onesignal": "^5.6.1",
+    "@ionic-native/onesignal": "^5.7.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -42,6 +43,7 @@
     "cordova-plugin-filepath": "1.5.5",
     "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
+    "jwt-decode": "^2.2.0",
     "onesignal-cordova-plugin": "2.4.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -59,6 +61,7 @@
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "~12.0.0",
     "codelyzer": "~4.5.0",
     "cordova-plugin-device": "^2.0.2",
