--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jwt-decode": "^2.2.0",
     "onesignal-cordova-plugin": "2.4.7",
     "rxjs": "~6.5.1",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
   },
